Modify: Final commitment solved layout issues

--- a/notesapp frontend/src/components/styles/ChatBoxComponent.module.css
+++ b/notesapp frontend/src/components/styles/ChatBoxComponent.module.css
@@ -132,7 +132,7 @@
     padding: 0;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
     width: 100%;
   }
 .backButtonContainer{
