--- a/notesapp frontend/src/components/styles/GroupListComponent.module.css
+++ b/notesapp frontend/src/components/styles/GroupListComponent.module.css
@@ -20,13 +20,10 @@
     z-index: 1;
     background-color: white;
   }
-  .notesFetchComponent {
-    width: 100%;
-    z-index: 0;
-  }
-
+ 
   .notesFetchContainer {
     margin-top: 154px;
+    width:100%;
   }
 
   .heading {
@@ -41,22 +38,18 @@
 @media screen and (max-width: 768.5px) {
   .container {
     position: relative;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height:100vh;
     margin: 0;
-    overflow: scroll;
-    overflow-x: hidden;
+    overflow: auto;
     background-color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
     margin: 0;
     padding: 0;
   }
 
   .title {
-    height: 154px;
-    width: 434px;
+    height: 14%;
+    width:100%;
     position: fixed;
     z-index: 1;
     background-color: white;
@@ -65,13 +58,10 @@
   .container::-webkit-scrollbar {
     width: 0px;
   }
-  .notesFetchComponent {
-    width: 100%;
-    z-index: 0;
-  }
 
   .notesFetchContainer {
     margin-top: 154px;
+    height: 80%;
   }
 
   .heading {
